tests/negative/types/tc_ternary.yvr
a, b: BOOL
a = true ? $sym{INT} : $sym{BOOL}
b = 1 ? true : false